# bodhi-freeswitch-module

./: .gitignore  Makefile.am  README.md  audio_pipe.cpp  audio_pipe.hpp  bodhi_transcribe_glue.cpp  bodhi_transcribe_glue.h  dg_transcribe_glue.cpp  dg_transcribe_glue.h  mod_bodhi_transcribe.c  mod_bodhi_transcribe.h  utils.cpp  utils.hpp
poc/scripts/: bodhi_transcribe.lua
